lang_op/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CommentText
    EndComment
    InitComment
    NextLine
    SuchThat

Grammar

Rule 0     S' -> expressions
Rule 1     BooleanExpression -> BooleanOr
Rule 2     IntExpression -> StringLen
Rule 3     IntExpression -> AddSub
Rule 4     StringExpression -> StringConcat
Rule 5     BooleanOr -> BooleanOr Or BooleanAnd
Rule 6     BooleanOr -> BooleanAnd
Rule 7     AlphExpression -> AlphConcat
Rule 8     StringLen -> LenOp StringExpression LenOp
Rule 9     StringLen -> LenOp StringExpression On AlphExpression LenOp
Rule 10    LangExpression -> StringPrefix
Rule 11    LangExpression -> StringSuffix
Rule 12    LangExpression -> AlphKleeneC
Rule 13    LangExpression -> AlphPositiveC
Rule 14    LangExpression -> LangKleeneC
Rule 15    LangExpression -> LangPositiveC
Rule 16    LangExpression -> LangUnion
Rule 17    LangExpression -> StringSubSequence
Rule 18    LangExpression -> StringSubString
Rule 19    StringConcat -> StringConcat Concat StringPow
Rule 20    StringConcat -> StringPow
Rule 21    AlphConcat -> AlphConcat Concat AlphPow
Rule 22    AlphConcat -> AlphPow
Rule 23    expressions -> expressions expression Term
Rule 24    expressions -> expression Term
Rule 25    BooleanAnd -> BooleanAnd And BooleanGroup
Rule 26    BooleanAnd -> BooleanGroup
Rule 27    StringPow -> StringPow Pow IntExpression
Rule 28    StringPow -> StringGroup
Rule 29    AddSub -> AddSub Add MultDiv
Rule 30    AddSub -> AddSub Sub MultDiv
Rule 31    AddSub -> MultDiv
Rule 32    LangUnion -> LangUnion Add LangConcat
Rule 33    LangUnion -> LangConcat
Rule 34    expression -> IntExpression
Rule 35    expression -> AlphExpression
Rule 36    expression -> StringExpression
Rule 37    expression -> LangExpression
Rule 38    expression -> BooleanExpression
Rule 39    expression -> ShowVal
Rule 40    expression -> Assigns
Rule 41    expression -> Declares
Rule 42    AlphPow -> AlphPow Pow IntExpression
Rule 43    AlphPow -> AlphGroup
Rule 44    StringGroup -> LGroup StringExpression RGroup
Rule 45    StringGroup -> String
Rule 46    StringGroup -> VString
Rule 47    ShowVal -> Show expression
Rule 48    ShowVal -> ShowInLine expression
Rule 49    BooleanGroup -> LGroup BooleanExpression RGroup
Rule 50    BooleanGroup -> Boolean
Rule 51    BooleanGroup -> VBoolean
Rule 52    LangConcat -> LangConcat Concat LangGroup
Rule 53    LangConcat -> LangGroup
Rule 54    AlphGroup -> LGroup AlphExpression RGroup
Rule 55    AlphGroup -> Alph
Rule 56    AlphGroup -> VAlph
Rule 57    MultDiv -> MultDiv Concat IntPow
Rule 58    MultDiv -> MultDiv Div IntPow
Rule 59    MultDiv -> IntPow
Rule 60    Declares -> StringDeclare
Rule 61    Declares -> IntDeclare
Rule 62    Declares -> AlphDeclare
Rule 63    Declares -> LangDeclare
Rule 64    Declares -> BooleanDeclare
Rule 65    Boolean -> True
Rule 66    Boolean -> False
Rule 67    LangGroup -> LGroup LangExpression RGroup
Rule 68    LangGroup -> VLang
Rule 69    Alph -> OpenStruct StringList CloseStruct
Rule 70    Alph -> OpenStruct StringExpression CloseStruct
Rule 71    Assigns -> StringAssign
Rule 72    Assigns -> IntAssign
Rule 73    Assigns -> AlphAssign
Rule 74    Assigns -> LangAssign
Rule 75    Assigns -> BooleanAssign
Rule 76    IntPow -> IntPow Pow Unary
Rule 77    IntPow -> Unary
Rule 78    AlphKleeneC -> AlphExpression KleeneC IntExpression
Rule 79    StringDeclare -> StringType VarName
Rule 80    StringDeclare -> StringType VarName Eq StringExpression
Rule 81    StringDeclare -> StringDeclare Splitter VarName
Rule 82    StringDeclare -> StringDeclare Splitter VarName Eq StringExpression
Rule 83    StringList -> StringList Splitter StringExpression
Rule 84    StringList -> StringExpression Splitter StringExpression
Rule 85    AlphPositiveC -> AlphExpression PositiveC IntExpression
Rule 86    Unary -> Sub Primary
Rule 87    Unary -> Primary
Rule 88    LangKleeneC -> LangExpression KleeneC IntExpression
Rule 89    Primary -> LGroup IntExpression RGroup
Rule 90    Primary -> VInt
Rule 91    Primary -> Int
Rule 92    LangPositiveC -> LangExpression PositiveC IntExpression
Rule 93    StringPrefix -> Prefix StringExpression
Rule 94    StringAssign -> VString Eq StringExpression
Rule 95    StringSuffix -> Suffix StringExpression
Rule 96    IntDeclare -> IntType VarName
Rule 97    IntDeclare -> IntType VarName Eq IntExpression
Rule 98    IntDeclare -> IntDeclare Splitter VarName
Rule 99    IntDeclare -> IntDeclare Splitter VarName Eq IntExpression
Rule 100   StringSubSequence -> SubSequence StringExpression
Rule 101   StringSubString -> SubString StringExpression
Rule 102   IntAssign -> VarName Eq IntExpression
Rule 103   AlphDeclare -> AlphType VarName
Rule 104   AlphDeclare -> AlphType VarName Eq AlphExpression
Rule 105   AlphDeclare -> AlphDeclare Splitter VarName
Rule 106   AlphDeclare -> AlphDeclare Splitter VarName Eq AlphExpression
Rule 107   AlphAssign -> VarName Eq AlphExpression
Rule 108   LangDeclare -> LangType VarName
Rule 109   LangDeclare -> LangType VarName Eq LangExpression
Rule 110   LangDeclare -> LangDeclare Splitter VarName
Rule 111   LangDeclare -> LangDeclare Splitter VarName Eq LangExpression
Rule 112   LangAssign -> VLang Eq LangExpression
Rule 113   BooleanDeclare -> BooleanType VarName
Rule 114   BooleanDeclare -> BooleanType VarName Eq BooleanExpression
Rule 115   BooleanDeclare -> BooleanDeclare Splitter VarName
Rule 116   BooleanDeclare -> BooleanDeclare Splitter VarName Eq BooleanExpression
Rule 117   BooleanAssign -> VBoolean Eq BooleanExpression

Terminals, with rules where they appear

Add                  : 29 32
AlphType             : 103 104
And                  : 25
BooleanType          : 113 114
CloseStruct          : 69 70
CommentText          : 
Concat               : 19 21 52 57
Div                  : 58
EndComment           : 
Eq                   : 80 82 94 97 99 102 104 106 107 109 111 112 114 116 117
False                : 66
InitComment          : 
Int                  : 91
IntType              : 96 97
KleeneC              : 78 88
LGroup               : 44 49 54 67 89
LangType             : 108 109
LenOp                : 8 8 9 9
NextLine             : 
On                   : 9
OpenStruct           : 69 70
Or                   : 5
PositiveC            : 85 92
Pow                  : 27 42 76
Prefix               : 93
RGroup               : 44 49 54 67 89
Show                 : 47
ShowInLine           : 48
Splitter             : 81 82 83 84 98 99 105 106 110 111 115 116
String               : 45
StringType           : 79 80
Sub                  : 30 86
SubSequence          : 100
SubString            : 101
SuchThat             : 
Suffix               : 95
Term                 : 23 24
True                 : 65
VAlph                : 56
VBoolean             : 51 117
VInt                 : 90
VLang                : 68 112
VString              : 46 94
VarName              : 79 80 81 82 96 97 98 99 102 103 104 105 106 107 108 109 110 111 113 114 115 116
error                : 

Nonterminals, with rules where they appear

AddSub               : 3 29 30
Alph                 : 55
AlphAssign           : 73
AlphConcat           : 7 21
AlphDeclare          : 62 105 106
AlphExpression       : 9 35 54 78 85 104 106 107
AlphGroup            : 43
AlphKleeneC          : 12
AlphPositiveC        : 13
AlphPow              : 21 22 42
Assigns              : 40
Boolean              : 50
BooleanAnd           : 5 6 25
BooleanAssign        : 75
BooleanDeclare       : 64 115 116
BooleanExpression    : 38 49 114 116 117
BooleanGroup         : 25 26
BooleanOr            : 1 5
Declares             : 41
IntAssign            : 72
IntDeclare           : 61 98 99
IntExpression        : 27 34 42 78 85 88 89 92 97 99 102
IntPow               : 57 58 59 76
LangAssign           : 74
LangConcat           : 32 33 52
LangDeclare          : 63 110 111
LangExpression       : 37 67 88 92 109 111 112
LangGroup            : 52 53
LangKleeneC          : 14
LangPositiveC        : 15
LangUnion            : 16 32
MultDiv              : 29 30 31 57 58
Primary              : 86 87
ShowVal              : 39
StringAssign         : 71
StringConcat         : 4 19
StringDeclare        : 60 81 82
StringExpression     : 8 9 36 44 70 80 82 83 84 84 93 94 95 100 101
StringGroup          : 28
StringLen            : 2
StringList           : 69 83
StringPow            : 19 20 27
StringPrefix         : 10
StringSubSequence    : 17
StringSubString      : 18
StringSuffix         : 11
Unary                : 76 77
expression           : 23 24 47 48
expressions          : 23 0

Parsing method: LALR

state 0

    (0) S' -> . expressions
    (23) expressions -> . expressions expression Term
    (24) expressions -> . expression Term
    (34) expression -> . IntExpression
    (35) expression -> . AlphExpression
    (36) expression -> . StringExpression
    (37) expression -> . LangExpression
    (38) expression -> . BooleanExpression
    (39) expression -> . ShowVal
    (40) expression -> . Assigns
    (41) expression -> . Declares
    (2) IntExpression -> . StringLen
    (3) IntExpression -> . AddSub
    (7) AlphExpression -> . AlphConcat
    (4) StringExpression -> . StringConcat
    (10) LangExpression -> . StringPrefix
    (11) LangExpression -> . StringSuffix
    (12) LangExpression -> . AlphKleeneC
    (13) LangExpression -> . AlphPositiveC
    (14) LangExpression -> . LangKleeneC
    (15) LangExpression -> . LangPositiveC
    (16) LangExpression -> . LangUnion
    (17) LangExpression -> . StringSubSequence
    (18) LangExpression -> . StringSubString
    (1) BooleanExpression -> . BooleanOr
    (47) ShowVal -> . Show expression
    (48) ShowVal -> . ShowInLine expression
    (71) Assigns -> . StringAssign
    (72) Assigns -> . IntAssign
    (73) Assigns -> . AlphAssign
    (74) Assigns -> . LangAssign
    (75) Assigns -> . BooleanAssign
    (60) Declares -> . StringDeclare
    (61) Declares -> . IntDeclare
    (62) Declares -> . AlphDeclare
    (63) Declares -> . LangDeclare
    (64) Declares -> . BooleanDeclare
    (8) StringLen -> . LenOp StringExpression LenOp
    (9) StringLen -> . LenOp StringExpression On AlphExpression LenOp
    (29) AddSub -> . AddSub Add MultDiv
    (30) AddSub -> . AddSub Sub MultDiv
    (31) AddSub -> . MultDiv
    (21) AlphConcat -> . AlphConcat Concat AlphPow
    (22) AlphConcat -> . AlphPow
    (19) StringConcat -> . StringConcat Concat StringPow
    (20) StringConcat -> . StringPow
    (93) StringPrefix -> . Prefix StringExpression
    (95) StringSuffix -> . Suffix StringExpression
    (78) AlphKleeneC -> . AlphExpression KleeneC IntExpression
    (85) AlphPositiveC -> . AlphExpression PositiveC IntExpression
    (88) LangKleeneC -> . LangExpression KleeneC IntExpression
    (92) LangPositiveC -> . LangExpression PositiveC IntExpression
    (32) LangUnion -> . LangUnion Add LangConcat
    (33) LangUnion -> . LangConcat
    (100) StringSubSequence -> . SubSequence StringExpression
    (101) StringSubString -> . SubString StringExpression
    (5) BooleanOr -> . BooleanOr Or BooleanAnd
    (6) BooleanOr -> . BooleanAnd
    (94) StringAssign -> . VString Eq StringExpression
    (102) IntAssign -> . VarName Eq IntExpression
    (107) AlphAssign -> . VarName Eq AlphExpression
    (112) LangAssign -> . VLang Eq LangExpression
    (117) BooleanAssign -> . VBoolean Eq BooleanExpression
    (79) StringDeclare -> . StringType VarName
    (80) StringDeclare -> . StringType VarName Eq StringExpression
    (81) StringDeclare -> . StringDeclare Splitter VarName
    (82) StringDeclare -> . StringDeclare Splitter VarName Eq StringExpression
    (96) IntDeclare -> . IntType VarName
    (97) IntDeclare -> . IntType VarName Eq IntExpression
    (98) IntDeclare -> . IntDeclare Splitter VarName
    (99) IntDeclare -> . IntDeclare Splitter VarName Eq IntExpression
    (103) AlphDeclare -> . AlphType VarName
    (104) AlphDeclare -> . AlphType VarName Eq AlphExpression
    (105) AlphDeclare -> . AlphDeclare Splitter VarName
    (106) AlphDeclare -> . AlphDeclare Splitter VarName Eq AlphExpression
    (108) LangDeclare -> . LangType VarName
    (109) LangDeclare -> . LangType VarName Eq LangExpression
    (110) LangDeclare -> . LangDeclare Splitter VarName
    (111) LangDeclare -> . LangDeclare Splitter VarName Eq LangExpression
    (113) BooleanDeclare -> . BooleanType VarName
    (114) BooleanDeclare -> . BooleanType VarName Eq BooleanExpression
    (115) BooleanDeclare -> . BooleanDeclare Splitter VarName
    (116) BooleanDeclare -> . BooleanDeclare Splitter VarName Eq BooleanExpression
    (57) MultDiv -> . MultDiv Concat IntPow
    (58) MultDiv -> . MultDiv Div IntPow
    (59) MultDiv -> . IntPow
    (42) AlphPow -> . AlphPow Pow IntExpression
    (43) AlphPow -> . AlphGroup
    (27) StringPow -> . StringPow Pow IntExpression
    (28) StringPow -> . StringGroup
    (52) LangConcat -> . LangConcat Concat LangGroup
    (53) LangConcat -> . LangGroup
    (25) BooleanAnd -> . BooleanAnd And BooleanGroup
    (26) BooleanAnd -> . BooleanGroup
    (76) IntPow -> . IntPow Pow Unary
    (77) IntPow -> . Unary
    (54) AlphGroup -> . LGroup AlphExpression RGroup
    (55) AlphGroup -> . Alph
    (56) AlphGroup -> . VAlph
    (44) StringGroup -> . LGroup StringExpression RGroup
    (45) StringGroup -> . String
    (46) StringGroup -> . VString
    (67) LangGroup -> . LGroup LangExpression RGroup
    (68) LangGroup -> . VLang
    (49) BooleanGroup -> . LGroup BooleanExpression RGroup
    (50) BooleanGroup -> . Boolean
    (51) BooleanGroup -> . VBoolean
    (86) Unary -> . Sub Primary
    (87) Unary -> . Primary
    (69) Alph -> . OpenStruct StringList CloseStruct
    (70) Alph -> . OpenStruct StringExpression CloseStruct
    (65) Boolean -> . True
    (66) Boolean -> . False
    (89) Primary -> . LGroup IntExpression RGroup
    (90) Primary -> . VInt
    (91) Primary -> . Int

    Show            shift and go to state 25
    ShowInLine      shift and go to state 26
    LenOp           shift and go to state 37
    Prefix          shift and go to state 42
    Suffix          shift and go to state 43
    SubSequence     shift and go to state 45
    SubString       shift and go to state 46
    VString         shift and go to state 48
    VarName         shift and go to state 49
    VLang           shift and go to state 50
    VBoolean        shift and go to state 51
    StringType      shift and go to state 52
    IntType         shift and go to state 53
    AlphType        shift and go to state 54
    LangType        shift and go to state 55
    BooleanType     shift and go to state 56
    LGroup          shift and go to state 63
    VAlph           shift and go to state 65
    String          shift and go to state 66
    Sub             shift and go to state 39
    OpenStruct      shift and go to state 69
    True            shift and go to state 70
    False           shift and go to state 71
    VInt            shift and go to state 72
    Int             shift and go to state 73

    expressions                    shift and go to state 1
    expression                     shift and go to state 2
    IntExpression                  shift and go to state 3
    AlphExpression                 shift and go to state 4
    StringExpression               shift and go to state 5
    LangExpression                 shift and go to state 6
    BooleanExpression              shift and go to state 7
    ShowVal                        shift and go to state 8
    Assigns                        shift and go to state 9
    Declares                       shift and go to state 10
    StringLen                      shift and go to state 11
    AddSub                         shift and go to state 12
    AlphConcat                     shift and go to state 13
    StringConcat                   shift and go to state 14
    StringPrefix                   shift and go to state 15
    StringSuffix                   shift and go to state 16
    AlphKleeneC                    shift and go to state 17
    AlphPositiveC                  shift and go to state 18
    LangKleeneC                    shift and go to state 19
    LangPositiveC                  shift and go to state 20
    LangUnion                      shift and go to state 21
    StringSubSequence              shift and go to state 22
    StringSubString                shift and go to state 23
    BooleanOr                      shift and go to state 24
    StringAssign                   shift and go to state 27
    IntAssign                      shift and go to state 28
    AlphAssign                     shift and go to state 29
    LangAssign                     shift and go to state 30
    BooleanAssign                  shift and go to state 31
    StringDeclare                  shift and go to state 32
    IntDeclare                     shift and go to state 33
    AlphDeclare                    shift and go to state 34
    LangDeclare                    shift and go to state 35
    BooleanDeclare                 shift and go to state 36
    MultDiv                        shift and go to state 38
    AlphPow                        shift and go to state 40
    StringPow                      shift and go to state 41
    LangConcat                     shift and go to state 44
    BooleanAnd                     shift and go to state 47
    IntPow                         shift and go to state 57
    AlphGroup                      shift and go to state 58
    StringGroup                    shift and go to state 59
    LangGroup                      shift and go to state 60
    BooleanGroup                   shift and go to state 61
    Unary                          shift and go to state 62
    Alph                           shift and go to state 64
    Boolean                        shift and go to state 67
    Primary                        shift and go to state 68

state 1

    (0) S' -> expressions .
    (23) expressions -> expressions . expression Term
    (34) expression -> . IntExpression
    (35) expression -> . AlphExpression
    (36) expression -> . StringExpression
    (37) expression -> . LangExpression
    (38) expression -> . BooleanExpression
    (39) expression -> . ShowVal
    (40) expression -> . Assigns
    (41) expression -> . Declares
    (2) IntExpression -> . StringLen
    (3) IntExpression -> . AddSub
    (7) AlphExpression -> . AlphConcat
    (4) StringExpression -> . StringConcat
    (10) LangExpression -> . StringPrefix
    (11) LangExpression -> . StringSuffix
    (12) LangExpression -> . AlphKleeneC
    (13) LangExpression -> . AlphPositiveC
    (14) LangExpression -> . LangKleeneC
    (15) LangExpression -> . LangPositiveC
    (16) LangExpression -> . LangUnion
    (17) LangExpression -> . StringSubSequence
    (18) LangExpression -> . StringSubString
    (1) BooleanExpression -> . BooleanOr
    (47) ShowVal -> . Show expression
    (48) ShowVal -> . ShowInLine expression
    (71) Assigns -> . StringAssign
    (72) Assigns -> . IntAssign
    (73) Assigns -> . AlphAssign
    (74) Assigns -> . LangAssign
    (75) Assigns -> . BooleanAssign
    (60) Declares -> . StringDeclare
    (61) Declares -> . IntDeclare
    (62) Declares -> . AlphDeclare
    (63) Declares -> . LangDeclare
    (64) Declares -> . BooleanDeclare
    (8) StringLen -> . LenOp StringExpression LenOp
    (9) StringLen -> . LenOp StringExpression On AlphExpression LenOp
    (29) AddSub -> . AddSub Add MultDiv
    (30) AddSub -> . AddSub Sub MultDiv
    (31) AddSub -> . MultDiv
    (21) AlphConcat -> . AlphConcat Concat AlphPow
    (22) AlphConcat -> . AlphPow
    (19) StringConcat -> . StringConcat Concat StringPow
    (20) StringConcat -> . StringPow
    (93) StringPrefix -> . Prefix StringExpression
    (95) StringSuffix -> . Suffix StringExpression
    (78) AlphKleeneC -> . AlphExpression KleeneC IntExpression
    (85) AlphPositiveC -> . AlphExpression PositiveC IntExpression
    (88) LangKleeneC -> . LangExpression KleeneC IntExpression
    (92) LangPositiveC -> . LangExpression PositiveC IntExpression
    (32) LangUnion -> . LangUnion Add LangConcat
    (33) LangUnion -> . LangConcat
    (100) StringSubSequence -> . SubSequence StringExpression
    (101) StringSubString -> . SubString StringExpression
    (5) BooleanOr -> . BooleanOr Or BooleanAnd
    (6) BooleanOr -> . BooleanAnd
    (94) StringAssign -> . VString Eq StringExpression
    (102) IntAssign -> . VarName Eq IntExpression
    (107) AlphAssign -> . VarName Eq AlphExpression
    (112) LangAssign -> . VLang Eq LangExpression
    (117) BooleanAssign -> . VBoolean Eq BooleanExpression
    (79) StringDeclare -> . StringType VarName
    (80) StringDeclare -> . StringType VarName Eq StringExpression
    (81) StringDeclare -> . StringDeclare Splitter VarName
    (82) StringDeclare -> . StringDeclare Splitter VarName Eq StringExpression
    (96) IntDeclare -> . IntType VarName
    (97) IntDeclare -> . IntType VarName Eq IntExpression
    (98) IntDeclare -> . IntDeclare Splitter VarName
    (99) IntDeclare -> . IntDeclare Splitter VarName Eq IntExpression
    (103) AlphDeclare -> . AlphType VarName
    (104) AlphDeclare -> . AlphType VarName Eq AlphExpression
    (105) AlphDeclare -> . AlphDeclare Splitter VarName
    (106) AlphDeclare -> . AlphDeclare Splitter VarName Eq AlphExpression
    (108) LangDeclare -> . LangType VarName
    (109) LangDeclare -> . LangType VarName Eq LangExpression
    (110) LangDeclare -> . LangDeclare Splitter VarName
    (111) LangDeclare -> . LangDeclare Splitter VarName Eq LangExpression
    (113) BooleanDeclare -> . BooleanType VarName
    (114) BooleanDeclare -> . BooleanType VarName Eq BooleanExpression
    (115) BooleanDeclare -> . BooleanDeclare Splitter VarName
    (116) BooleanDeclare -> . BooleanDeclare Splitter VarName Eq BooleanExpression
    (57) MultDiv -> . MultDiv Concat IntPow
    (58) MultDiv -> . MultDiv Div IntPow
    (59) MultDiv -> . IntPow
    (42) AlphPow -> . AlphPow Pow IntExpression
    (43) AlphPow -> . AlphGroup
    (27) StringPow -> . StringPow Pow IntExpression
    (28) StringPow -> . StringGroup
    (52) LangConcat -> . LangConcat Concat LangGroup
    (53) LangConcat -> . LangGroup
    (25) BooleanAnd -> . BooleanAnd And BooleanGroup
    (26) BooleanAnd -> . BooleanGroup
    (76) IntPow -> . IntPow Pow Unary
    (77) IntPow -> . Unary
    (54) AlphGroup -> . LGroup AlphExpression RGroup
    (55) AlphGroup -> . Alph
    (56) AlphGroup -> . VAlph
    (44) StringGroup -> . LGroup StringExpression RGroup
    (45) StringGroup -> . String
    (46) StringGroup -> . VString
    (67) LangGroup -> . LGroup LangExpression RGroup
    (68) LangGroup -> . VLang
    (49) BooleanGroup -> . LGroup BooleanExpression RGroup
    (50) BooleanGroup -> . Boolean
    (51) BooleanGroup -> . VBoolean
    (86) Unary -> . Sub Primary
    (87) Unary -> . Primary
    (69) Alph -> . OpenStruct StringList CloseStruct
    (70) Alph -> . OpenStruct StringExpression CloseStruct
    (65) Boolean -> . True
    (66) Boolean -> . False
    (89) Primary -> . LGroup IntExpression RGroup
    (90) Primary -> . VInt
    (91) Primary -> . Int

    Show            shift and go to state 25
    ShowInLine      shift and go to state 26
    LenOp           shift and go to state 37
    Prefix          shift and go to state 42
    Suffix          shift and go to state 43
    SubSequence     shift and go to state 45
    SubString       shift and go to state 46
    VString         shift and go to state 48
    VarName         shift and go to state 49
    VLang           shift and go to state 50
    VBoolean        shift and go to state 51
    StringType      shift and go to state 52
    IntType         shift and go to state 53
    AlphType        shift and go to state 54
    LangType        shift and go to state 55
    BooleanType     shift and go to state 56
    LGroup          shift and go to state 63
    VAlph           shift and go to state 65
    String          shift and go to state 66
    Sub             shift and go to state 39
    OpenStruct      shift and go to state 69
    True            shift and go to state 70
    False           shift and go to state 71
    VInt            shift and go to state 72
    Int             shift and go to state 73

    expression                     shift and go to state 74
    IntExpression                  shift and go to state 3
    AlphExpression                 shift and go to state 4
    StringExpression               shift and go to state 5
    LangExpression                 shift and go to state 6
    BooleanExpression              shift and go to state 7
    ShowVal                        shift and go to state 8
    Assigns                        shift and go to state 9
    Declares                       shift and go to state 10
    StringLen                      shift and go to state 11
    AddSub                         shift and go to state 12
    AlphConcat                     shift and go to state 13
    StringConcat                   shift and go to state 14
    StringPrefix                   shift and go to state 15
    StringSuffix                   shift and go to state 16
    AlphKleeneC                    shift and go to state 17
    AlphPositiveC                  shift and go to state 18
    LangKleeneC                    shift and go to state 19
    LangPositiveC                  shift and go to state 20
    LangUnion                      shift and go to state 21
    StringSubSequence              shift and go to state 22
    StringSubString                shift and go to state 23
    BooleanOr                      shift and go to state 24
    StringAssign                   shift and go to state 27
    IntAssign                      shift and go to state 28
    AlphAssign                     shift and go to state 29
    LangAssign                     shift and go to state 30
    BooleanAssign                  shift and go to state 31
    StringDeclare                  shift and go to state 32
    IntDeclare                     shift and go to state 33
    AlphDeclare                    shift and go to state 34
    LangDeclare                    shift and go to state 35
    BooleanDeclare                 shift and go to state 36
    MultDiv                        shift and go to state 38
    AlphPow                        shift and go to state 40
    StringPow                      shift and go to state 41
    LangConcat                     shift and go to state 44
    BooleanAnd                     shift and go to state 47
    IntPow                         shift and go to state 57
    AlphGroup                      shift and go to state 58
    StringGroup                    shift and go to state 59
    LangGroup                      shift and go to state 60
    BooleanGroup                   shift and go to state 61
    Unary                          shift and go to state 62
    Alph                           shift and go to state 64
    Boolean                        shift and go to state 67
    Primary                        shift and go to state 68

state 2

    (24) expressions -> expression . Term

    Term            shift and go to state 75


state 3

    (34) expression -> IntExpression .

    Term            reduce using rule 34 (expression -> IntExpression .)


state 4

    (35) expression -> AlphExpression .
    (78) AlphKleeneC -> AlphExpression . KleeneC IntExpression
    (85) AlphPositiveC -> AlphExpression . PositiveC IntExpression

    Term            reduce using rule 35 (expression -> AlphExpression .)
    KleeneC         shift and go to state 76
    PositiveC       shift and go to state 77


state 5

    (36) expression -> StringExpression .

    Term            reduce using rule 36 (expression -> StringExpression .)


state 6

    (37) expression -> LangExpression .
    (88) LangKleeneC -> LangExpression . KleeneC IntExpression
    (92) LangPositiveC -> LangExpression . PositiveC IntExpression

    Term            reduce using rule 37 (expression -> LangExpression .)
    KleeneC         shift and go to state 78
    PositiveC       shift and go to state 79


state 7

    (38) expression -> BooleanExpression .

    Term            reduce using rule 38 (expression -> BooleanExpression .)


state 8

    (39) expression -> ShowVal .

    Term            reduce using rule 39 (expression -> ShowVal .)


state 9

    (40) expression -> Assigns .

    Term            reduce using rule 40 (expression -> Assigns .)


state 10

    (41) expression -> Declares .

    Term            reduce using rule 41 (expression -> Declares .)


state 11

    (2) IntExpression -> StringLen .

    Term            reduce using rule 2 (IntExpression -> StringLen .)
    RGroup          reduce using rule 2 (IntExpression -> StringLen .)
    KleeneC         reduce using rule 2 (IntExpression -> StringLen .)
    PositiveC       reduce using rule 2 (IntExpression -> StringLen .)
    Splitter        reduce using rule 2 (IntExpression -> StringLen .)
    Pow             reduce using rule 2 (IntExpression -> StringLen .)
    Concat          reduce using rule 2 (IntExpression -> StringLen .)
    LenOp           reduce using rule 2 (IntExpression -> StringLen .)
    On              reduce using rule 2 (IntExpression -> StringLen .)
    CloseStruct     reduce using rule 2 (IntExpression -> StringLen .)


state 12

    (3) IntExpression -> AddSub .
    (29) AddSub -> AddSub . Add MultDiv
    (30) AddSub -> AddSub . Sub MultDiv

    Term            reduce using rule 3 (IntExpression -> AddSub .)
    RGroup          reduce using rule 3 (IntExpression -> AddSub .)
    KleeneC         reduce using rule 3 (IntExpression -> AddSub .)
    PositiveC       reduce using rule 3 (IntExpression -> AddSub .)
    Splitter        reduce using rule 3 (IntExpression -> AddSub .)
    Pow             reduce using rule 3 (IntExpression -> AddSub .)
    Concat          reduce using rule 3 (IntExpression -> AddSub .)
    LenOp           reduce using rule 3 (IntExpression -> AddSub .)
    On              reduce using rule 3 (IntExpression -> AddSub .)
    CloseStruct     reduce using rule 3 (IntExpression -> AddSub .)
    Add             shift and go to state 80
    Sub             shift and go to state 81


state 13

    (7) AlphExpression -> AlphConcat .
    (21) AlphConcat -> AlphConcat . Concat AlphPow

    KleeneC         reduce using rule 7 (AlphExpression -> AlphConcat .)
    PositiveC       reduce using rule 7 (AlphExpression -> AlphConcat .)
    Term            reduce using rule 7 (AlphExpression -> AlphConcat .)
    RGroup          reduce using rule 7 (AlphExpression -> AlphConcat .)
    LenOp           reduce using rule 7 (AlphExpression -> AlphConcat .)
    Splitter        reduce using rule 7 (AlphExpression -> AlphConcat .)
    Concat          shift and go to state 82


state 14

    (4) StringExpression -> StringConcat .
    (19) StringConcat -> StringConcat . Concat StringPow

    Term            reduce using rule 4 (StringExpression -> StringConcat .)
    LenOp           reduce using rule 4 (StringExpression -> StringConcat .)
    On              reduce using rule 4 (StringExpression -> StringConcat .)
    KleeneC         reduce using rule 4 (StringExpression -> StringConcat .)
    PositiveC       reduce using rule 4 (StringExpression -> StringConcat .)
    RGroup          reduce using rule 4 (StringExpression -> StringConcat .)
    Splitter        reduce using rule 4 (StringExpression -> StringConcat .)
    CloseStruct     reduce using rule 4 (StringExpression -> StringConcat .)
    Concat          shift and go to state 83


state 15

    (10) LangExpression -> StringPrefix .

    KleeneC         reduce using rule 10 (LangExpression -> StringPrefix .)
    PositiveC       reduce using rule 10 (LangExpression -> StringPrefix .)
    Term            reduce using rule 10 (LangExpression -> StringPrefix .)
    RGroup          reduce using rule 10 (LangExpression -> StringPrefix .)
    Splitter        reduce using rule 10 (LangExpression -> StringPrefix .)


state 16

    (11) LangExpression -> StringSuffix .

    KleeneC         reduce using rule 11 (LangExpression -> StringSuffix .)
    PositiveC       reduce using rule 11 (LangExpression -> StringSuffix .)
    Term            reduce using rule 11 (LangExpression -> StringSuffix .)
    RGroup          reduce using rule 11 (LangExpression -> StringSuffix .)
    Splitter        reduce using rule 11 (LangExpression -> StringSuffix .)


state 17

    (12) LangExpression -> AlphKleeneC .

    KleeneC         reduce using rule 12 (LangExpression -> AlphKleeneC .)
    PositiveC       reduce using rule 12 (LangExpression -> AlphKleeneC .)
    Term            reduce using rule 12 (LangExpression -> AlphKleeneC .)
    RGroup          reduce using rule 12 (LangExpression -> AlphKleeneC .)
    Splitter        reduce using rule 12 (LangExpression -> AlphKleeneC .)


state 18

    (13) LangExpression -> AlphPositiveC .

    KleeneC         reduce using rule 13 (LangExpression -> AlphPositiveC .)
    PositiveC       reduce using rule 13 (LangExpression -> AlphPositiveC .)
    Term            reduce using rule 13 (LangExpression -> AlphPositiveC .)
    RGroup          reduce using rule 13 (LangExpression -> AlphPositiveC .)
    Splitter        reduce using rule 13 (LangExpression -> AlphPositiveC .)


state 19

    (14) LangExpression -> LangKleeneC .

    KleeneC         reduce using rule 14 (LangExpression -> LangKleeneC .)
    PositiveC       reduce using rule 14 (LangExpression -> LangKleeneC .)
    Term            reduce using rule 14 (LangExpression -> LangKleeneC .)
    RGroup          reduce using rule 14 (LangExpression -> LangKleeneC .)
    Splitter        reduce using rule 14 (LangExpression -> LangKleeneC .)


state 20

    (15) LangExpression -> LangPositiveC .

    KleeneC         reduce using rule 15 (LangExpression -> LangPositiveC .)
    PositiveC       reduce using rule 15 (LangExpression -> LangPositiveC .)
    Term            reduce using rule 15 (LangExpression -> LangPositiveC .)
    RGroup          reduce using rule 15 (LangExpression -> LangPositiveC .)
    Splitter        reduce using rule 15 (LangExpression -> LangPositiveC .)


state 21

    (16) LangExpression -> LangUnion .
    (32) LangUnion -> LangUnion . Add LangConcat

    KleeneC         reduce using rule 16 (LangExpression -> LangUnion .)
    PositiveC       reduce using rule 16 (LangExpression -> LangUnion .)
    Term            reduce using rule 16 (LangExpression -> LangUnion .)
    RGroup          reduce using rule 16 (LangExpression -> LangUnion .)
    Splitter        reduce using rule 16 (LangExpression -> LangUnion .)
    Add             shift and go to state 84


state 22

    (17) LangExpression -> StringSubSequence .
